Fix: Filter/Summarize/Editor buttons don't collapse or wrap on smaller screen widths
Fixes #62784

--- a/frontend/src/metabase/query_builder/components/view/ViewHeader/ViewTitleHeader.module.css
+++ b/frontend/src/metabase/query_builder/components/view/ViewHeader/ViewTitleHeader.module.css
@@ -166,6 +166,7 @@
   margin-left: auto;
   gap: 0.5rem;
   position: relative;
+  flex-wrap: wrap;
 
   @media screen and (max-width: 40em) {
     margin-left: 0;
